<resources>
    <string name="app_name">ekrishi</string>
    <string name="apom">APOM</string>
    <string name="sign_in_text">SIGN IN</string>
    <string name="forgot_buttom_text">FORGOT</string>
    <string name="register_button_text">REGISTER</string>
    <string name="email_input_hint">Email</string>
    <string name="password_input_hint">Password</string>
    <string name="todo">TODO</string>
    <string name="phone_input_hint">Mobile Number</string>
    <string name="registration_apom">APOM REGISTRATION</string>
    <string name="name_input_hint">Full Name</string>
    <string name="message">this is a test message</string>
    <string name="mobile_number_is_empty">Mobile number is empty</string>
    <string name="password_is_empty">Password is empty</string>
    <string name="password_is_short">Pasword field must be greater than or equal to 6 in chars</string>
    <string name="mobile_number_is_valid">Mobile number is an Indian mobile number</string>
    <string name="mobile_number_is_not_valid">Mobile is not a valid number</string>

</resources>