<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_blck"
    tools:context=".RegisterActivity">

    <Button
        android:id="@+id/register_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="@color/app_green"
        android:text="@string/register_button_text"
        app:backgroundTint="@color/app_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_input">

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints=""
            android:background="@color/input_background_color"
            android:drawableStart="@drawable/ic_secured_lock"
            android:drawableLeft="@drawable/ic_secured_lock"
            android:drawablePadding="5sp"
            android:ems="10"
            android:hint="@string/password_input_hint"
            android:inputType="textPassword"
            android:nextFocusDown="@id/signin_button"
            android:paddingLeft="15sp"
            android:paddingRight="15sp"
            android:textSize="12sp" />

        <ImageButton
            android:id="@+id/eye_button"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal|center_vertical|end"
            android:background="@android:color/transparent"
            android:contentDescription="@string/todo"
            android:onClick="onEyeButtonPressed"
            app:srcCompat="@drawable/ic_eye_open" />

    </FrameLayout>

    <EditText
        android:id="@+id/phone_input"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:autofillHints=""
        android:background="@color/input_background_color"
        android:drawableStart="@drawable/ic_smartphone"

        android:drawableLeft="@drawable/ic_smartphone"
        android:drawablePadding="5sp"
        android:ems="10"
        android:hint="@string/phone_input_hint"
        android:inputType="phone"
        android:nextFocusDown="@id/password_input"
        android:paddingLeft="15sp"
        android:paddingRight="15sp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_input" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/registration_apom"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_apple_seeklogo_com" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_button">

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal|center_vertical|end"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center_horizontal|center_vertical"
            android:padding="0dp"
            android:text="@string/sign_in_text" />
    </LinearLayout>

    <EditText
        android:id="@+id/name_input"
        android:layout_width="0dp"
        android:layout_height="50sp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="@color/input_background_color"
        android:drawableStart="@drawable/ic_user"
        android:drawableLeft="@drawable/ic_user"
        android:drawablePadding="5sp"
        android:ems="10"
        android:hint="@string/name_input_hint"
        android:inputType="textPersonName"
        android:paddingLeft="15sp"
        android:paddingRight="15sp"
        android:text="Name"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>